--- a/package.json
+++ b/package.json
@@ -23,26 +23,26 @@
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "events": "^3.3.0",
-    "expo": "~53.0.9",
+    "expo": "53.0.11",
     "expo-ads-admob": "^13.0.0",
-    "expo-blur": "~14.1.4",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
-    "expo-linear-gradient": "^14.1.4",
+    "expo-image": "~2.3.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-router": "^5.0.7",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "https-browserify": "^1.0.0",
     "pako": "^2.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-animatable": "^1.4.0",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -50,13 +50,15 @@
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tcp-socket": "^6.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "readable-stream": "^4.7.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "expo-auth-session": "~6.2.0",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
