--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "dayjs": "^1.11.13",
     "events": "^3.3.0",
     "expo": "53.0.11",
-    "expo-ads-admob": "^13.0.0",
+    "expo-apple-authentication": "~7.2.4",
+    "expo-auth-session": "~6.2.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -47,6 +49,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-macos": "^0.78.3",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -56,9 +59,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "readable-stream": "^4.7.0",
-    "stream-http": "^3.2.0",
-    "expo-auth-session": "~6.2.0",
-    "expo-crypto": "~14.1.5"
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
