Changed codes and added new files.

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "privacy": "public",
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "web"
     ],
     "ios": {
       "supportsTablet": true,
